--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pure Reason Example</title>
+  <title>Tasks - ReasonML</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
